--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://seg1211.github.io/onemr",
+  "homepage": "http://seg1211.github.io/nej",
   "name": "kaiftipoimala",
   "version": "0.1.0",
   "private": true,
